fix: style fixes

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <li>
             GitHub <i class="fa-brands fa-github" style="color: #74c0fc"></i>
           </li>
-          <li style="display: flex; gap: 10px; align-items: center">
+          <li style="display: flex; gap: 10px; align-items: center; justify-content: space-evenly">
             Socket.io
             <svg
               role="img"
@@ -246,16 +246,16 @@
       <div id="projects" class="projects box">
         <h2>Projects</h2>
         <ul>
-          <li> <a href="https://toka-o14g.onrender.com/" target="_blank" rel="noopener noreferrer"><img src="imgs/toka1.png" alt="Toka project preview" width="400px" height="400px" loading="lazy"/></a>
+          <li> <a href="https://toka-o14g.onrender.com/" target="_blank" rel="noopener noreferrer"><img src="imgs/toka1.png" alt="Toka project preview" width="400" height="400" loading="lazy"/></a>
             <p>
             <b> Toka:</b>  full stack social network app </p>
           <p>Live demo: <a href="https://toka-o14g.onrender.com/" target="_blank" rel="noopener noreferrer">🔗</a><br/>You can use test account for login - password:test1234| email:testemail@gmail.com<br/> ⚠️ May take ~30s to wake up on first load<br/>  Source code: <a href="https://github.com/amakas/MyApp" target="_blank" rel="noopener noreferrer">💻</a></p></li>
-          <li>  <a href="https://tic-tac-toe-28.vercel.app/" target="_blank" rel="noopener noreferrer"><img src="imgs/tic-tac.png" alt="tic-tac-toe project preview" width="400px" height="400px" loading="lazy"/></a>
+          <li>  <a class="less" href="https://tic-tac-toe-28.vercel.app/" target="_blank" rel="noopener noreferrer"><img src="imgs/tic-tac.png" alt="tic-tac-toe project preview" width="400" height="400" loading="lazy"/></a>
             <p>
             <b>Tic-tac-toe:</b>  simple game on vanilla JavaScript</p>
             <p>Live demo: <a href="https://tic-tac-toe-28.vercel.app/" target="_blank" rel="noopener noreferrer">🔗</a>,  Source code: <a href="https://github.com/amakas/Tic-tac-toe" target="_blank" rel="noopener noreferrer">💻</a></p>
           </li>
-          <li>  <a href="https://prophecies.vercel.app/" target="_blank" rel="noopener noreferrer"><img src="imgs/prophecies.png" alt="Prophecies project preview" width="400px" height="400px" loading="lazy"/></a>
+          <li>  <a href="https://prophecies.vercel.app/" target="_blank" rel="noopener noreferrer"><img src="imgs/prophecies.png" alt="Prophecies project preview" width="400" height="400" loading="lazy"/></a>
             <p><b>Prophecies:</b>  simulator of prophecies on vanilla JavaScript  </p>
             <p>Live demo: <a href="https://prophecies.vercel.app/" target="_blank" rel="noopener noreferrer">🔗</a>,  Source code: <a href="https://github.com/amakas/Prophecies" target="_blank" rel="noopener noreferrer">💻</a></p>
           </li>
