feat: add Letterly

--- a/index.html
+++ b/index.html
@@ -259,6 +259,10 @@
             <p><b>Prophecies:</b>  simulator of prophecies on vanilla JavaScript  </p>
             <p>Live demo: <a href="https://prophecies.vercel.app/" target="_blank" rel="noopener noreferrer">🔗</a>,  Source code: <a href="https://github.com/amakas/Prophecies" target="_blank" rel="noopener noreferrer">💻</a></p>
           </li>
+          <li>  <a href="https://letterly-my.vercel.app/" target="_blank" rel="noopener noreferrer"><img src="imgs/letterly.png" alt="Letterly project preview" width="400" height="400" loading="lazy"/></a>
+            <p><b>Letterly:</b>  Wordle-like game with React, Next.js  </p>
+            <p>Live demo: <a href="https://letterly-my.vercel.app/" target="_blank" rel="noopener noreferrer">🔗</a>,  Source code: <a href="https://github.com/amakas/Letterly" target="_blank" rel="noopener noreferrer">💻</a></p>
+          </li>
         </ul>
       </div>
       <div id="contacts" class="contacts box">
